--- a/pubs/preprints.bib
+++ b/pubs/preprints.bib
@@ -1,3 +1,20 @@
+@online{groot_high-resolution_2024,
+  type = {SSRN Scholarly Paper},
+  title = {A {{High-Resolution}} 7 {{Tesla Resting-State Fmri Dataset Optimized}} for {{Studying}} the {{Subcortex}}},
+  author = {Groot, Josephine Maria and Miletic, Steven and Isherwood, Scott J. S. and Tse, Desmond H. Y. and Habli, Sarah and Haberg, Asta K. and Bazin, Pierre-Louis and Mittner, Matthias and Forstmann, B. U.},
+  date = {2024-05-10},
+  number = {4819910},
+  location = {{Rochester, NY}},
+  doi = {10.2139/ssrn.4819910},
+  url = {https://papers.ssrn.com/abstract=4819910},
+  urldate = {2024-05-14},
+  abstract = {To achieve a comprehensive understanding of spontaneous brain dynamics in humans, in vivo acquisition of intrinsic activity across both cortical and subcortical regions is necessary. Here we present advanced whole-brain, resting-state functional magnetic resonance imaging (rs-fMRI) data acquired at 7 Tesla with 1.5 mm isotropic voxel resolution. Functional images were obtained from 56 healthy adults (33 females, ages 19-39 years) in two runs of 15 minutes eyes-open wakeful rest. The high spatial resolution and short echo times of the multiband echo-planar imaging (EPI) protocol optimizes blood oxygen level-dependent (BOLD)-sensitivity for the subcortex while concurrent respiratory and cardiac measures enable retrospective correction of physiological noise, resulting in data that is highly suitable for researchers interested in subcortical BOLD signal. Functional timeseries were coregistered to high-resolution T1-weighted structural data (0.75 mm isotropic voxels) acquired during the same scanning session. To accommodate data reutilization, functional and structural images were formatted to the Brain Imaging Data Structure (BIDS) and preprocessed with fMRIPrep.},
+  langid = {english},
+  pubstate = {preprint},
+  keywords = {BOLD,cardiac,fMRIPrep,MP2RAGE,respiration,Ultra-high field},
+  file = {/Users/mmi041/Zotero/storage/RNVPKZT5/Groot et al. - 2024 - A High-Resolution 7 Tesla Resting-State Fmri Datas.pdf}
+}
+
 @online{teodora_vekony_mind_2023,
   title = {Mind Wandering Enhances Predictive Processing},
   author = {{Teodóra Vékony} and {Bence Farkas} and {Bianka Brezóczki} and {Matthias Mittner} and {Gábor Csifcsák} and {Péter Simor} and {Dezso Nemeth}},
