--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -221,6 +221,13 @@
   note = {[[pdf]]/papers/Groot2023JoN.pdf[[/pdf]][[preprint]]https://psyarxiv.com/xr25q/[[/preprint]][[supplement]]https://osf.io/wt3uc/[[/supplement]]}
 }
 
+@article{grootHighresolutionTeslaRestingstate2024a,
+  title = {A High-Resolution 7 {{Tesla}} Resting-State {{fMRI}} Dataset Optimized for Studying the Subcortex},
+  author = {Groot, Josephine M and Miletic, Steven and Isherwood, Scott JS and Tse, Desmond H. Y. and Habli, Sarah and Håberg, Asta K. and Bazin, Pierre-Louis and Mittner, Matthias and Forstmann, B. U.},
+  date = {2024-06-17},
+  journaltitle = {Data in Brief}
+}
+
 @article{grootProbingNeuralSignature2021,
   title = {Probing the Neural Signature of Mind Wandering with Simultaneous {{fMRI-EEG}} and Pupillometry},
   author = {Groot, Josephine M and Boayue, Nya M and Csifcsák, Gábor and Boekel, Wouter and Huster, René and Forstmann, Birte U and Mittner, Matthias},
