--- a/posts/linux_on_thinpad_x1_gen12.qmd
+++ b/posts/linux_on_thinpad_x1_gen12.qmd
@@ -199,6 +199,18 @@ In GNOME, there is a distinction between switching between windows on the same s
 
 I also had to turn off the <Alt>+Tab shortcut for switching between windows in the standard settings.
 
+### Fix lock screen on suspend
+
+Weirdly, even though in the normal "Screen Lock" settings in the Gnome settings, I have set "Lock screen on suspend" it would not do that. I had to toggle the switch in `dconf-editor` that is called `/org/gnome/desktop/lockdown/disable-lock/screen` (it was turned on by default). After disabling the "disable" switch, it is once again working.
+
+### Do not open new windows in fullscreen
+
+Somehow that happened very often and I found it very annoying. I found a solution [here](https://askubuntu.com/questions/1412195/how-can-i-prevent-apps-from-opening-new-windows-in-full-window-mode) that works perfectly. Change the setting under `org.gnome.mutter` to `false` or use
+
+```
+gsettings set org.gnome.mutter auto-maximize false
+```
+
 ## Cool apps
 
 Some cool apps I stumbled upon and that I use:
