--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -12,6 +12,7 @@
   urldate = {2024-10-30},
   abstract = {Mind wandering (MW) is the intentional or unintentional experience of attending to internal task-unrelated thoughts while being occupied with an external task. Even though maintaining task focus is assumed to require executive functions (EF), it is not clear how and to what extent MW and EF interact. Research has found that activity in the dorsolateral prefrontal cortex (DLPFC) is associated with EF and MW. To understand the causal role of the DLPFC in relation to MW and EF, researchers have turned to non-invasive brain stimulation. Thus far, most studies have used transcranial direct current stimulation, but the results have been inconclusive. To further elucidate the relationship between the DLPFC, EF and MW, we conducted a pre-registered, sham-controlled, triple-blinded within-subject experiment by combining intermittent theta burst stimulation (iTBS) interleaved with a recently developed MW-EF task. In contrast to our expectations, participants reported significantly more MW following real iTBS as compared to sham stimulation. However, at the same time, psychomotor precision and EF improved, indicating that participants were able to engage in resource-intensive MW while simultaneously performing well on the task. We argue that iTBS enhanced the underlying executive resources that could be used to increase both MW and task performance in line with the resource-control view of MW. This finding opens exciting avenues for studying the complex interplay between MW and EF and provides empirical support for the utility of iTBS in improving executive performance during a demanding cognitive task.},
   keywords = {Executive functions,Executive resources,Intermittent theta burst stimulation,Mind wandering,Repetitive transcranial magnetic stimulation},
+  note = {[[pdf]]/papers/Aasen2024Increasing.pdf[[/pdf]][[preprint]]https://osf.io/preprints/psyarxiv/fkx3w[[/preprint]][[supplement]]https://osf.io/txpu2/[[/supplement]]},
   file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/LCP3AX6Y/Aasen et al. - 2024 - Increasing mind wandering with accelerated intermittent theta burst stimulation over the left dorsol.pdf;/home/mmi041/snap/zotero-snap/common/Zotero/storage/L7XJM9Z7/S0028393224002239.html}
 }
 
@@ -987,6 +988,26 @@
   langid = {english},
   keywords = {Adult,Choice Behavior,Conditioning Operant,Dorsolateral prefrontal cortex,Double-Blind Method,Exploitation,Exploration,Humans,Male,Neuropsychological Tests,Prefrontal Cortex,Probabilistic learning task,Transcranial direct current stimulation,Transcranial Direct Current Stimulation,Working memory,Young Adult},
   note = {[[pdf]]/papers/Turi2015cortex.pdf[[/pdf]]}
+}
+
+@article{vekonyMindWanderingEnhances2025,
+  title = {Mind Wandering Enhances Statistical Learning},
+  author = {Vékony, Teodóra and Farkas, Bence C. and Brezóczki, Bianka and Mittner, Matthias and Csifcsák, Gábor and Simor, Péter and Németh, Dezső},
+  date = {2025-02-21},
+  journaltitle = {iScience},
+  shortjournal = {iScience},
+  volume = {28},
+  number = {2},
+  eprint = {39906558},
+  eprinttype = {pmid},
+  publisher = {Elsevier},
+  issn = {2589-0042},
+  doi = {10.1016/j.isci.2024.111703},
+  url = {https://www.cell.com/iscience/abstract/S2589-0042(24)02930-4},
+  urldate = {2025-02-25},
+  langid = {english},
+  keywords = {Psychology},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/G9MMF8LK/Vékony et al. - 2025 - Mind wandering enhances statistical learning.pdf}
 }
 
 @article{zmeykinaShortlivedAlphaPower2021,
