--- a/pubs/preprints.bib
+++ b/pubs/preprints.bib
@@ -1,12 +1,15 @@
-@online{teodora_vekony_mind_2023,
-  title = {Mind Wandering Enhances Predictive Processing},
-  author = {{Teodóra Vékony} and {Bence Farkas} and {Bianka Brezóczki} and {Matthias Mittner} and {Gábor Csifcsák} and {Péter Simor} and {Dezso Nemeth}},
-  date = {2023-05-05},
-  doi = {10.21203/rs.3.rs-2874035/v1},
-  url = {https://www.researchsquare.com/article/rs-2874035/v1},
-  urldate = {2023-05-10},
-  abstract = {This study investigated the potential adaptive aspects of mind wandering (MW), a common phenomenon in which individuals shift their attention from external tasks to internal thoughts. Despite the well-documented negative effects of MW on cognitive performance and links to psychiatric condition...},
+@online{schultheissEfficientProspectiveElectric2025,
+  title = {Efficient {{Prospective Electric Field-Informed Localization}} of {{Motor Cortical Targets}} of {{Transcranial Magnetic Stimulation}}},
+  author = {Schultheiss, David Luis and Turi, Zsolt and Marmavula, Srilekha and Reinacher, Peter Christoph and Demerath, Theo and Straehle, Jakob and Boedecker, Joschka and Mittner, Matthias and Vlachos, Andreas},
+  date = {2025-02-25},
+  eprinttype = {bioRxiv},
+  eprintclass = {New Results},
+  pages = {2025.02.20.639076},
+  doi = {10.1101/2025.02.20.639076},
+  url = {https://www.biorxiv.org/content/10.1101/2025.02.20.639076v1},
+  urldate = {2025-02-26},
+  abstract = {Transcranial magnetic stimulation (TMS) is a versatile non-invasive tool for brain mapping and neuromodulation in both healthy individuals and patients. Effective TMS-based causal brain mapping relies on precise localization of cortical targets. Current state-of-the-art approaches use statistical methods to quantify the relationship between TMS-induced electric fields (E-fields) and motor evoked potential (MEP) amplitudes. However, this method typically relies on the random selection of coil configurations, which limits its efficacy. In this study, we present a novel optimization strategy for TMS-based motor mapping by prospectively selecting coil configurations based on their E-field characteristics using an iterative sampling algorithm called farthest point sampling (FPS). Through a combination of theoretical analysis, simulation and experimental validation including 10 healthy individuals, we systematically evaluated the performance of FPS against the random sampling approach. Our results demonstrate that FPS is twice as efficient as random sampling in reducing the number of trials required for estimating the motor map, while also being more robust across participants and less susceptible to noise. These findings highlight the potential of FPS to significantly enhance the efficiency of motor mapping, paving the way for the development of more effective TMS mapping algorithms.},
   langid = {english},
-  pubstate = {preprint},
-  file = {/Users/mmi041/Zotero/storage/5HLY8WDY/2023 - Mind wandering enhances predictive processing.pdf}
+  pubstate = {prepublished},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/DVZMXGD6/Schultheiss et al. - 2025 - Efficient Prospective Electric Field-Informed Localization of Motor Cortical Targets of Transcranial.pdf}
 }
