--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -36,6 +36,44 @@
   note = {[[pdf]]/papers/Alexandersen2022.pdf[[/pdf]][[preprint]]https://psyarxiv.com/qfcm9/[[/preprint]][[supplement]]https://osf.io/cv24f/[[/supplement]]}
 }
 
+@article{alexandersenUnravellingThreadsThought2025,
+  title = {Unravelling the Threads of Thought: {{Probing}} the Impact of Contextual Factors on Mind Wandering},
+  shorttitle = {Unravelling the Threads of Thought},
+  author = {Alexandersen, Andreas and Dahlberg, Krister and Csifcsák, Gábor and Mittner, Matthias},
+  date = {2025-05-01},
+  journaltitle = {Consciousness and Cognition},
+  shortjournal = {Consciousness and Cognition},
+  volume = {131},
+  pages = {103870},
+  issn = {1053-8100},
+  doi = {10.1016/j.concog.2025.103870},
+  url = {https://www.sciencedirect.com/science/article/pii/S1053810025000637},
+  urldate = {2025-04-28},
+  abstract = {This study investigated the influence of contextual factors on mind wandering (MW) by leveraging an online platform for an established laboratory task. We investigated how direct performance feedback, information about task progression, and the feeling of being monitored influenced performance indices in a task used to investigate the effect of MW on executive control. Our results indicate that specific performance feedback, and not general positive feedback, consistently improved performance, while neither impacted self-reported MW. Conversely, feedback on task progression and the feeling of being monitored increased self-reported MW, possibly reflecting participant self-awareness due to contextual distractions. Intriguingly, information relaying task progression also substantially increased performance. These findings highlight the potential of performance feedback to reduce the negative effects of MW on task performance in an online setting. Additionally, the findings suggest that information about task progression, as well as the notion of being monitored during the experiment can influence task focus and should be taken into consideration when investigating fluctuations of attention during cognitive tasks.},
+  keywords = {Approximate entropy,Behavioral variability,Contextual factors,Finger tapping,Mind wandering,Online experiment,Performance feedback},
+  note = {[[pdf]]/papers/Alexandersen2025Unraveling.pdf[[/pdf]][[preprint]]https://osf.io/preprints/psyarxiv/ywdv2\_v3[[/preprint]][[supplement]]https://osf.io/wjvk2/[[/supplement]]},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/PDHUV6QK/Alexandersen et al. - 2025 - Unravelling the threads of thought Probing the impact of contextual factors on mind wandering.pdf;/home/mmi041/snap/zotero-snap/common/Zotero/storage/S96RDYTY/S1053810025000637.html}
+}
+
+@article{babikerInterplayExperimentalHeat2025a,
+  title = {The {{Interplay Between Experimental Heat Pain}} and {{Noninvasive Stimulation}} of the {{Medial Prefrontal Cortex}} on {{Reinforcement Learning With Manipulated Outcome Contingencies}}},
+  author = {Babiker, Samy and Luzzi, Federica and Mittner, Matthias and Csifcsák, Gábor},
+  date = {2025},
+  journaltitle = {European Journal of Neuroscience},
+  volume = {61},
+  number = {7},
+  pages = {e70089},
+  issn = {1460-9568},
+  doi = {10.1111/ejn.70089},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ejn.70089},
+  urldate = {2025-03-31},
+  abstract = {Pain negatively affects several cognitive abilities, but knowledge about its effect on reinforcement learning (RL) is limited. During RL, instrumental choices can be influenced by heuristic tendencies to approach rewards or inhibit actions when facing potentially aversive events, introducing “Pavlovian bias” in behavior. Recent studies suggest that compromised outcome controllability enhances Pavlovian bias, a phenomenon that may be linked to suboptimal decision-making in learned helplessness (LH). Since LH is common in chronic pain syndromes, this study sought to establish a link between experimental heat pain (EHP), disrupted reward/loss contingencies, and RL performance in healthy adults. In addition, we investigated if intermittent theta burst stimulation (iTBS) above the medial prefrontal/dorsal anterior cingulate cortex (mPFC/dACC) alleviates the deleterious effects of EHP on choice behavior. In a preregistered, 2 × 2 between-group, double-blind study (N = 100), healthy adult participants underwent three blocks of an orthogonalized Go/NoGo task with two interleaved bouts of active or sham iTBS, and either EHP or warm skin stimulation combined with manipulated response–outcome contingency during the task. Although EHP did not impact response accuracy, it invigorated actions for rewards, reflecting enhanced Pavlovian bias. Whereas two bouts of iTBS attenuated Pavlovian tendencies, this effect was counteracted by EHP, indicating antagonistic effects of pain and iTBS-modulated mPFC activity on Pavlovian–instrumental interactions. Surprisingly, EHP and iTBS exerted largely similar effects on other latent parameters of RL (go-bias, learning rate, and exploration) in a manner that resembled LH. These findings shed light on the role of experimental pain and mPFC/dACC activity in LH-like choice behavior.},
+  langid = {english},
+  keywords = {learned helplessness,medial prefrontal cortex,pain,Pavlovian bias,reinforcement learning,repetitive transcranial magnetic stimulation},
+  note = {e70089 EJN-2024-10-32111.R1},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/KPTANAXP/ejn.html}
+}
+
 @article{behrendtEventrelatedBrainPotential2010,
   title = {Event-Related Brain Potential Correlates of Identity Negative Priming from Overlapping Pictures},
   author = {Behrendt, Jörg and Gibbons, Henning and Schrobsdorff, Hecke and Ihrke, Matthias and Herrmann, J. Michael and Hasselhorn, Marcus},
@@ -999,7 +1037,7 @@
   volume = {28},
   number = {2},
   eprint = {39906558},
-  eprinttype = {pmid},
+  eprinttype = {pubmed},
   publisher = {Elsevier},
   issn = {2589-0042},
   doi = {10.1016/j.isci.2024.111703},
