--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -36,6 +36,14 @@
   note = {[[pdf]]/papers/Alexandersen2022.pdf[[/pdf]][[preprint]]https://psyarxiv.com/qfcm9/[[/preprint]][[supplement]]https://osf.io/cv24f/[[/supplement]]}
 }
 
+@article{alexandersenEvidenceEfficacyThetaburst2025,
+  title = {Evidence for the Efficacy of Theta-Burst Stimulation above the Angular Gyrus for Reducing Mind Wandering Propensity: {{A}} Successful Pre-Registered Study},
+  author = {Alexandersen, Andreas and Aasen, Steffen Rygg and Csifcsak, Gabor and Mittner, Matthias},
+  date = {2025-07-25},
+  journaltitle = {Cortex},
+  doi = {10.31234/osf.io/m4zyk_v2}
+}
+
 @article{alexandersenUnravellingThreadsThought2025,
   title = {Unravelling the Threads of Thought: {{Probing}} the Impact of Contextual Factors on Mind Wandering},
   shorttitle = {Unravelling the Threads of Thought},
@@ -236,6 +244,22 @@
   langid = {english},
   keywords = {decision-making,learned helplessness,medial prefrontal cortex,Pavlovian bias,reinforcement learning,tDCS},
   note = {[[pdf]]/papers/Csifcsak2021eNeuro.pdf[[/pdf]][[supplement]]https://osf.io/d6eqk/[[/supplement]][[preprint]]https://psyarxiv.com/rbeuz/[[/preprint]]}
+}
+
+@article{drevlandReducingMindWandering2025a,
+  title = {Reducing Mind Wandering Using Continuous Theta Burst Stimulation},
+  author = {Drevland, Ragnhild Nicolaisen and Aasen, Steffen Rygg and Csifcsák, Gábor and Mittner, Matthias},
+  date = {2025-06-29},
+  journaltitle = {Transcranial Magnetic Stimulation},
+  shortjournal = {Transcranial Magnetic Stimulation},
+  pages = {100181},
+  issn = {3050-5291},
+  doi = {10.1016/j.transm.2025.100181},
+  url = {https://www.sciencedirect.com/science/article/pii/S3050529125000972},
+  urldate = {2025-07-01},
+  abstract = {Background Mind wandering (MW) involves an attentional drift away from an external task to internal thoughts and goals. In the last decade, a substantial number of studies have investigated the possibility of influencing MW using transcranial direct current stimulation (tDCS). One common target region of interest is the angular gyrus (AG), a core region of the default-mode network (DMN), which is believed to play a major role in the initiation and maintenance of MW episodes. However, the accumulated evidence suggests that tDCS may not be sufficiently strong to reliably affect MW propensity. Hypothesis We hypothesized that by using repetitive transcranial magnetic stimulation (rTMS) with an inhibitory continuous theta-burst stimulation (cTBS) protocol over the left AG would reduce MW during a demanding cognitive task. Method We applied inhibitory cTBS over the left AG to interfere with MW propensity in healthy adults. In a triple-blind, crossover design, participants performed four blocks of the finger-tapping random-sequence generation task (FT-RSGT) with three interleaved bouts of real or sham cTBS. Results Our pre-registered statistical analysis found no support for our main hypotheses. However, in our secondary statistical analysis we found that real cTBS reduced both self-reported MW propensity and behavioural variability, an objective marker of MW, while maintaining comparable levels of executive task performance. Conclusion These results indicate that cTBS targeting the DMN may be an effective protocol to reduce MW, which may have important implications for basic and applied research.},
+  keywords = {angular gyrus,continuous theta burst stimulation,default mode network,mind wandering,repetitive transcranial magnetic stimulation},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/GLIRWX4V/S3050529125000972.html}
 }
 
 @article{grootCatchingWanderingMinds2022,
@@ -625,6 +649,14 @@
   langid = {english},
   keywords = {adaptive-gain theory,Attention,Awareness,Brain,Brain Mapping,Cognition,default-mode network,gain modulation.,Humans,locus coeruleus,Locus Coeruleus,Magnetic Resonance Imaging,mind wandering,Nerve Net,norepinephrine,Thinking},
   note = {[[pdf]]/papers/Mittner2016TICS.pdf[[/pdf]][[correction]]https://doi.org/10.1016/j.tics.2017.04.008[[/correction]]}
+}
+
+@article{mittnerNovelMethodModeling2025,
+  title = {A Novel Method for Modeling Tonic and Phasic Pupil Dynamics in Humans},
+  author = {Mittner, Matthias and Groot, Josephine},
+  date = {2025},
+  journaltitle = {Behavioural Research Methods},
+  doi = {10.31234/osf.io/7ju4a_v2}
 }
 
 @article{mittnerPypillometryPythonPackage2020,
